--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=`, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="I ATE A BIG RED CANDLE" />
-    <meta name="og:description" content="I LOVE LAMP" />
+    <meta name="og:description" content="i love lamp" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
-    <title>I LOVE LAMP</title>
+    <title>terakhir</title>
     <style>
       html {
         background-image: url(images/background.jpeg);
